<resources>
    <string name="app_name">FoodLovers</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_from_menu_listed_below">Choose from Menu Listed below :</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="preference_file_name">Login Prefernce</string>
    <string name="q1">Q.1 Between what times can the order be placed ?</string>
    <string name="a1">A.1 You can place the order anytime.We are available 24*7 hours.</string>
    <string name="q2">Q.2 How fast is your deivery ?</string>
    <string name="a2">A.2 Our delivery man will reach you within 30 minutes of your pacing the order.Very soon in the comng future, we shall also provide functionality to Live Trace the delivery person bringing your order.</string>
    <string name="q3">Q.3 How efficient is your food packaging ?</string>
    <string name="a3">A.3 The food is packed so as to keep it warm and fresh till it reaches you.We use eco friendy plastic and foil for the same.</string>
    <string name="q4">Q.4 Can I trust on the food provided by your restaurants ?</string>
    <string name="a4">A.4 All our restaurants have been verified by us first and then only are allowed to serve you.</string>
    <string name="q5">Q.5 Where to contact in case of any problem ?</string>
    <string name="a5">A.5 You can email to <b>aswaniakshay@gmail.com</b> or call on <b>+91-8107074517</b> .</string>
    <string name="register">Register Yourself</string>
    <string name="name">Name(Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_min_4_characters">Password(Min. 4 characters)</string>
    <string name="new_user_register"><u>Don\'t have an account? Sign up now.</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="login">Login</string>
    <string name="whatToDo">Enter your registered mobile number and email below:</string>
    <string name="add">Add</string>
    <string name="_1">1</string>
    <string name="item_name">Item Name</string>
    <string name="rs_100">Rs. 100</string>
    <string name="item_price">Item Price</string>
    <string name="todo">TODO</string>
    <string name="next">Next</string>
</resources>
