<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPassword1Activity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="196dp"
        android:layout_height="138dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/txtExplaination"
        android:padding="6dp"
        android:layout_below="@id/imgLogo"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/whatToDo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtExplaination"
        android:id="@+id/etMobileNumber"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="10"
        android:background="#fff"
        android:hint="@string/mobile_number"
        android:drawableStart="@drawable/ic_phone"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/etMobileNumber"
        android:id="@+id/etEmailID"
        android:inputType="textWebEmailAddress"
        android:maxLines="1"
        android:background="#fff"
        android:hint="@string/email_address"
        android:drawableStart="@drawable/ic_email"
        android:autofillHints="" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btnNext"
        android:layout_below="@id/etEmailID"
        android:text="@string/next"
        android:background="#E91E1E"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"/>


</RelativeLayout>