<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:weightSum="7"
    android:id="@+id/llcontent">

    <!--The weight sum property is used to divide the layout into
    different parts and then giving each layout a particular weight
    gives it that amount of space on the screen-->


    <!--Since each parent layout will have a specific weight, we need
    not give any width to those layout-->

    <TextView
        android:id="@+id/txtItemID"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:layout_height="match_parent"
        android:text = "@string/_1"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_weight="0.50"/>

    <RelativeLayout
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/item_name"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtCostForOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@id/txtItemName"
            android:text="@string/rs_100"
            android:textSize="12sp" />

    </RelativeLayout>


    <!--Many times we see that texts have an image along with them to
    their right or left. This is added with the help of the
    drawableLeft (or drawableRight and so on) attribute-->

    <Button
        android:id="@+id/btnAddItem"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/btnRemove"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        android:layout_marginBottom="10dp"
        android:text="@string/add">
    </Button>

</LinearLayout>

