<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="194dp"
        android:layout_height="189dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/etMobileNumber"
        android:layout_below="@id/imgLogo"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="10"
        android:background="#fff"
        android:hint="@string/mobile_number"
        android:drawableLeft="@drawable/ic_phone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/etpassword"
        android:layout_below="@id/etMobileNumber"
        android:inputType="textPassword"
        android:maxLines="1"
        android:background="#fff"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btnLogin"
        android:layout_below="@id/etpassword"

        android:text="@string/login"
        android:background="#F5FF0000"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_marginTop="16dp"
        android:id="@+id/txtForgot"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="#fff"
        android:text="@string/forgot_password"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:id="@+id/txtRegister"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="#fff"
        android:text="@string/new_user_register" />


</RelativeLayout>