<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="0dp"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:id="@+id/llcontent">

        <ImageView
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:padding="5dp"
            android:src="@drawable/ic_ordered_item"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txtItemName"
            android:layout_width="0dp"
            android:layout_weight="2.80"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/item_name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtItemPrice"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/item_price"
            android:textColor="#000000"
            android:textSize="16sp" />


    </LinearLayout>

</androidx.cardview.widget.CardView>

